deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kgqa-crowdsourcing-app
  labels:
    app: kgqa-crowdsourcing-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kgqa-crowdsourcing-app
  template:
    metadata:
      labels:
        app: kgqa-crowdsourcing-app
    spec:
      restartPolicy: Always
      containers:
      - name: kgqa-crowdsourcing-app
        tty: true
        stdin: true
        image: registry.paas.psnc.pl/graphia/kgqa-crowdsourcing-app:latest
        resources:
          limits:
            memory: "8Gi"
            cpu: "8"
          requests:
            memory: "4Gi"
            cpu: "4"
        ports:
        - containerPort: 8002
          protocol: TCP
          name: http
      imagePullSecrets:
      - name: registry-paas-psnc
