deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgqa-crowdsourcing-app-service
spec:
  type: ClusterIP
  selector:
    app: kgqa-crowdsourcing-app
  ports:
    - port: 80
      targetPort: 8002
      protocol: TCP
